--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -33,7 +33,7 @@ particular.
 
 A few basic points should be particularly understood:
 
-\beginlist
+\beginlist%unordered
 
 \item{--} ``Subgroup (generator) and relator tables'' that are used in
 the description of coset enumeration in \cite{Neu82}, and to which  we
@@ -99,7 +99,7 @@ The first main decision for any coset enumeration is in which sequence
 to make definitions. When a new coset number has  to  be  defined,  in
 {\ACE} there are basically three possible methods to choose from:
 
-\beginlist
+\beginlist%unordered
 
 \atindex{C style}{@C style!definition}
 \item{--} One may fill the next empty entry  in  the  coset  table  by
