--- a/doc/examples.tex
+++ b/doc/examples.tex
@@ -15,13 +15,13 @@
 \Chapter{Examples}
 
 In this chapter  we  collect  together  a  number  of  examples  which
-illustrate the various ways in which the {\ACE} Share Package  may  be
-used, and give some interactions with the `ACEExample' function. In  a
-number of cases, we have set the `InfoLevel' of  `InfoACE'  to  3,  so
-that all output from {\ACE} is displayed,  prepended  by  ```\#I  '''.
-Recall that to also see the commands directed *to*  {\ACE}  (behind  a
-```ToACE> ''' prompt), you will need to set the `InfoACE' level to  4.
-We have omitted the line
+illustrate the various ways in which the {\ACE} Package may  be  used,
+and give some interactions with the `ACEExample' function. In a number
+of cases, we have set the `InfoLevel' of `InfoACE' to 3, so  that  all
+output from {\ACE} is displayed, prepended by ```\#I  '''. Recall that
+to also see the commands directed *to* {\ACE} (behind a  ```ToACE> '''
+prompt), you will need to set  the  `InfoACE'  level  to  4.  We  have
+omitted the line
 
 \beginexample
 gap> RequirePackage("ace");
@@ -821,7 +821,7 @@ gap> ?Using ACEReadResearchExample
 %each of <head>, <middle>, <tail> is a  word  of  integral  bi-syllabic
 %length. Moreover,
 %
-%\beginlist
+%\beginlist%unordered
 %
 %\item{--} <head> is fixed (as mentioned above); 
 %
