--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -11,7 +11,7 @@
 %Y                      University of Queensland, Australia.
 %%
 \input ../../../doc/gapmacro
-\def\ACE{{\sf ACE}}
+\Package{ACE}
 
 \BeginningOfBook{ace}
 
@@ -26,7 +26,7 @@
 \TitlePage{
   \centerline{\titlefont ACE}\medskip
   \centerline{\titlefont ---}\medskip
-  \centerline{\titlefont A GAP4 Share Package}\bigskip\bigskip
+  \centerline{\titlefont A GAP4 Package}\bigskip\bigskip
   \centerline{\secfont Version \input ../VERSION}\medskip
   \centerline{\secfont Based on ACE Standalone Version 3.001}
   \vfill
