--- a/doc/moreexamples.tex
+++ b/doc/moreexamples.tex
@@ -16,8 +16,8 @@
 The examples in this chapter  are  intended  to  provide  the  nearest
 {\GAP} equivalent of the similarly named  sections  in  Appendix~A  of
 `ace3001.dvi' (the standalone manual in  directory  `standalone-doc').
-There is a *lot* of detail here, which the novice {\ACE} Share Package
-user won't want to know about. Please, despite the name of  the  first
+There is a *lot* of detail here, which the novice {\ACE} Package  user
+won't want to know about.  Please,  despite  the  name  of  the  first
 section of this chapter,  read  the  examples  in  Appendix~"Examples"
 first.
 
@@ -49,9 +49,9 @@ rec( index := 0, cputime := 43, cputimeUnits := "10^-2 seconds",
 gap>
 \endexample
 
-The example shows that the {\ACE} share  package  does  allow  you  to
-recover from the `break'-loop.  However,  the  definition  of  `fgens'
-above is local to the `break'-loop, and in any case we shall want  two
+The example shows that the {\ACE} package does allow  you  to  recover
+from the `break'-loop. However, the definition  of  `fgens'  above  is
+local to  the  `break'-loop,  and  in  any  case  we  shall  want  two
 generators for the examples we wish to consider and raise  some  other
 points; so let us re-define `fgens' and start again:
 
