--- a/doc/install.tex
+++ b/doc/install.tex
@@ -82,10 +82,10 @@ executing
 
 in the `doc' subdirectory.
 
-The  subdirectory  `standalone-doc'  contains the  file  `ace3001.dvi'
-which holds a version of the user manual for the {\ACE} standalone; it
-forms part of~\cite{Ram99}).  You  should consult it if  you are going
-to  switch to  the {\ACE}  standalone, e.g.~in  order to  directly use
+The subdirectory `standalone-doc' contains the file `ace3001.ps' which
+holds a version of the user manual for the {\ACE} standalone; it forms
+part of~\cite{Ram99}). You should consult  it  if  you  are  going  to
+switch to  the  {\ACE}  standalone,  e.g.~in  order  to  directly  use
 interactive facilities.
 
 The  `src' subdirectory  contains a  copy  of the  original source  of
