--- a/doc/options.tex
+++ b/doc/options.tex
@@ -313,7 +313,8 @@ turn messaging on (but to be fairly infrequent) by setting  `messages'
 to a large positive value as follows:
 
 \beginexample
-gap> ACECosetTable(fgens, rels, [c] : echo, hard, Wo := 10^7, mess := 10000);;
+gap> ACECosetTable(fgens, rels, [c] 
+>                  : echo, hard, Wo := 10^7, mess := 10000);;
 \endexample
 
 As mentioned in the previous section, `echo' may be thought  of  as  a
