--- a/doc/examples.tex
+++ b/doc/examples.tex
@@ -74,10 +74,11 @@ gap> # Recall that we did: TCENUM:=ACETCENUM;;
 gap> G := PerfectGroup(IsPermGroup, 16*60, 1   # Arguments ... as per usual
 >                      : max := 50, mess := 10 # ... but we use ACE options
 >                      );
-#I  ACE 3.001        Tue Aug 21 13:06:00 2001
+#I  ACE 3.001        Sun Sep 30 22:08:11 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
+#I    name = rigel
+#I  ***
 #I    #--- ACE 3.001: Run Parameters ---
 #I  Group Name: G;
 #I  Group Generators: abstuv;
@@ -97,7 +98,6 @@ gap> G := PerfectGroup(IsPermGroup, 16*60, 1   # Arguments ... as per usual
 #I  CC: a=19 r=4 h=1 n=31; l=2 c=+0.00; d=0
 #I  CC: a=19 r=6 h=1 n=36; l=2 c=+0.00; d=0
 #I  INDEX = 16 (a=16 r=36 h=1 n=36; l=3 c=0.00; m=30 t=35)
-#I  ***
 #I  CO: a=16 r=17 h=1 n=17; c=+0.00
 #I   coset ||      b      B      a      s      t      u      v
 #I  -------+-------------------------------------------------
@@ -149,10 +149,11 @@ gap> table := ACECosetTableFromGensAndRels(
 >                 fgens, RelatorsOfFpGroup(G), fgens{[1]}
 >                 # options
 >                 : mendelsohn, max:=800, mess:=500);
-#I  ACE 3.001        Tue Aug 21 13:07:34 2001
+#I  ACE 3.001        Sun Sep 30 22:10:10 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
+#I    name = rigel
+#I  ***
 #I    #--- ACE 3.001: Run Parameters ---
 #I  Group Name: G;
 #I  Group Generators: abstuvd;
@@ -167,13 +168,12 @@ gap> table := ACECosetTableFromGensAndRels(
 #I  C:0; R:0; Fi:13; PMod:3; PSiz:256; DMod:4; DSiz:1000;
 #I    #---------------------------------
 #I  SG: a=1 r=1 h=1 n=2; l=1 c=+0.00; m=1 t=1
-#I  RD: a=321 r=68 h=1 n=412; l=5 c=+0.01; m=327 t=411
+#I  RD: a=321 r=68 h=1 n=412; l=5 c=+0.00; m=327 t=411
 #I  CC: a=435 r=162 h=1 n=719; l=9 c=+0.00; d=0
-#I  CL: a=428 r=227 h=1 n=801; l=13 c=+0.01; m=473 t=800
+#I  CL: a=428 r=227 h=1 n=801; l=13 c=+0.00; m=473 t=800
 #I  DD: a=428 r=227 h=1 n=801; l=14 c=+0.00; d=33
 #I  CO: a=428 r=192 h=243 n=429; l=15 c=+0.00; m=473 t=800
-#I  INDEX = 480 (a=480 r=210 h=484 n=484; l=18 c=0.03; m=480 t=855)
-#I  ***
+#I  INDEX = 480 (a=480 r=210 h=484 n=484; l=18 c=0.00; m=480 t=855)
 #I  CO: a=480 r=210 h=481 n=481; c=+0.00
 #I   coset ||      a      A      b      B      s      t      u      v      d
 #I  -------+---------------------------------------------------------------
@@ -228,10 +228,10 @@ ACEStart called with the following arguments:
  Group generators : [ a, b ]
  Group relators : [ a^2, b^3, a*b*a*b*a*b*a*b*a*b ]
  Subgroup generators : [ a*b ]
-#I  ACE 3.001        Tue Aug 21 13:09:13 2001
+#I  ACE 3.001        Sun Sep 30 22:11:42 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
+#I    name = rigel
 ACEStart called with the following options:
  echo := true (not passed to ACE)
  enum := A_5
@@ -404,6 +404,10 @@ ACEStats called with the following arguments:
  Group relators : [ a*b*c^-1, b*c*d^-1, c*d*e^-1, d*e*x^-1, e*x*y^-1, 
   x*y*a^-1, y*a*b^-1 ]
  Subgroup generators : [  ]
+#I  ACE 3.001        Sun Sep 30 22:16:08 2001
+#I  =========================================
+#I  Host information:
+#I    name = rigel
 ACEStats called with the following options:
  echo := true (not passed to ACE)
  enum := F(2,7), aka C_29
@@ -411,10 +415,7 @@ ACEStats called with the following options:
  wo := 2M
  mess := 25000
  purec (no value, passed to ACE via option: pure c)
-#I  ACE 3.001        Tue Aug 21 13:11:52 2001
-#I  =========================================
-#I  Host information:
-#I    name = hamal
+#I  ***
 #I    #--- ACE 3.001: Run Parameters ---
 #I  Group Name: F(2,7), aka C_29;
 #I  Group Generators: abcdexy;
@@ -425,20 +426,19 @@ ACEStats called with the following options:
 #I  As:0; Path:0; Row:0; Mend:0; No:0; Look:0; Com:100;
 #I  C:1000; R:0; Fi:1; PMod:0; PSiz:256; DMod:4; DSiz:1000;
 #I    #---------------------------------
-#I  DD: a=5290 r=1 h=1050 n=5291; l=8 c=+0.03; d=2
-#I  CD: a=10410 r=1 h=2149 n=10411; l=13 c=+0.04; m=10410 t=10410
-#I  DD: a=15428 r=1 h=3267 n=15429; l=18 c=+0.04; d=0
-#I  DD: a=20430 r=1 h=4386 n=20431; l=23 c=+0.04; d=1
-#I  DD: a=25397 r=1 h=5519 n=25399; l=28 c=+0.04; d=1
-#I  CD: a=30313 r=1 h=6648 n=30316; l=33 c=+0.03; m=30313 t=30315
-#I  DS: a=32517 r=1 h=7326 n=33240; l=36 c=+0.03; s=2000 d=997 c=4
-#I  DS: a=31872 r=1 h=7326 n=33240; l=36 c=+0.01; s=4000 d=1948 c=53
-#I  DS: a=29077 r=1 h=7326 n=33240; l=36 c=+0.01; s=8000 d=3460 c=541
-#I  DS: a=23433 r=1 h=7326 n=33240; l=36 c=+0.03; s=16000 d=5940 c=2061
-#I  DS: a=4163 r=1 h=7326 n=33240; l=36 c=+0.09; s=32000 d=447 c=15554
-#I  INDEX = 29 (a=29 r=1 h=33240 n=33240; l=37 c=0.51; m=33237 t=33239)
-#I  ***
-rec( index := 29, cputime := 51, cputimeUnits := "10^-2 seconds", 
+#I  DD: a=5290 r=1 h=1050 n=5291; l=8 c=+0.00; d=2
+#I  CD: a=10410 r=1 h=2149 n=10411; l=13 c=+0.01; m=10410 t=10410
+#I  DD: a=15428 r=1 h=3267 n=15429; l=18 c=+0.01; d=0
+#I  DD: a=20430 r=1 h=4386 n=20431; l=23 c=+0.02; d=1
+#I  DD: a=25397 r=1 h=5519 n=25399; l=28 c=+0.01; d=1
+#I  CD: a=30313 r=1 h=6648 n=30316; l=33 c=+0.01; m=30313 t=30315
+#I  DS: a=32517 r=1 h=7326 n=33240; l=36 c=+0.01; s=2000 d=997 c=4
+#I  DS: a=31872 r=1 h=7326 n=33240; l=36 c=+0.00; s=4000 d=1948 c=53
+#I  DS: a=29077 r=1 h=7326 n=33240; l=36 c=+0.00; s=8000 d=3460 c=541
+#I  DS: a=23433 r=1 h=7326 n=33240; l=36 c=+0.01; s=16000 d=5940 c=2061
+#I  DS: a=4163 r=1 h=7326 n=33240; l=36 c=+0.03; s=32000 d=447 c=15554
+#I  INDEX = 29 (a=29 r=1 h=33240 n=33240; l=37 c=0.15; m=33237 t=33239)
+rec( index := 29, cputime := 15, cputimeUnits := "10^-2 seconds", 
   activecosets := 29, maxcosets := 33237, totcosets := 33239 )
 \endexample
 
@@ -650,7 +650,7 @@ Other options set via ACE defaults:
  row := 1
  rt := 1000
  time := -1
-#I  INDEX = 1 (a=1 r=2 h=2 n=2; l=3 c=0.01; m=2049 t=3127)
+#I  INDEX = 1 (a=1 r=2 h=2 n=2; l=3 c=0.00; m=2049 t=3127)
 [ [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], 
   [ 1 ], [ 1 ], [ 1 ], [ 1 ] ]
 \endexample
@@ -1193,7 +1193,8 @@ gap> ?Using ACEReadResearchExample
 %rec(
 %  gens := [ x, y ],
 %  rels := 
-%   [ x^2, y^3, x*y*x*y*x*y^-1*x*y*x*y*x*y^-1*x*y*x*y^-1*x*y^-1*x*y^-1*x*y*x*y*\
+%   [ x^2, y^3, x*y*x*y*x*y^-1*x*y*x*y*x*y^-1*x*y*x*y^-1*x*y^-1*x*y^-1*x*y*x*y*x\
+%*y*x*y^-1*x*y^-1 ],
 %x*y*x*y^-1*x*y^-1 ],
 %  sgens := [ x*y^-1 ] )
 %gap>
