--- a/doc/moreexamples.tex
+++ b/doc/moreexamples.tex
@@ -80,9 +80,9 @@ overflows:
 
 \beginexample
 gap> ACEStats(fgens, [], []);
-#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.09; m=249998 t=249998\
-)
-rec( index := 0, cputime := 9, cputimeUnits := "10^-2 seconds", 
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.10; m=249998 t=2499\
+98)
+rec( index := 0, cputime := 10, cputimeUnits := "10^-2 seconds", 
   activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
 \endexample
 
@@ -111,11 +111,11 @@ presentation and parameters:
 \beginexample
 gap> SetInfoACELevel(3);
 gap> ACEStats(fgens, [], [] : start, sr := 1);
-#I  ACE 3.001        Tue Aug 21 13:45:15 2001
+#I  ACE 3.001        Wed Oct 31 09:36:39 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
-#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.29; m=249998 t=2499\
+#I    name = rigel
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.09; m=249998 t=2499\
 98)
 #I    #--- ACE 3.001: Run Parameters ---
 #I  Group Name: G;
@@ -127,8 +127,7 @@ gap> ACEStats(fgens, [], [] : start, sr := 1);
 #I  As:0; Path:0; Row:1; Mend:0; No:0; Look:0; Com:10;
 #I  C:0; R:0; Fi:7; PMod:3; PSiz:256; DMod:4; DSiz:1000;
 #I    #---------------------------------
-#I  ***
-rec( index := 0, cputime := 29, cputimeUnits := "10^-2 seconds",
+rec( index := 0, cputime := 9, cputimeUnits := "10^-2 seconds", 
   activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
 \endexample
 
@@ -141,16 +140,17 @@ level set to 3):
 
 \beginexample
 gap> ACEStats(fgens, [], [] : print := [-1, 12]);
-#I  ACE 3.001        Tue Aug 21 13:45:59 2001
+#I  ACE 3.001        Wed Oct 31 09:37:37 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
+#I    name = rigel
 #I  ** ERROR (continuing with next line)
 #I     no information in table
-#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.28; m=249998 t=2499\
-98)
 #I  ***
-rec( index := 0, cputime := 28, cputimeUnits := "10^-2 seconds",
+#I  ***
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.09; m=249998 t=2499\
+98)
+rec( index := 0, cputime := 9, cputimeUnits := "10^-2 seconds", 
   activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
 \endexample
 
@@ -166,11 +166,11 @@ of the coset table), namely, insert  the  `start'  option  before  the
 
 \beginexample
 gap> ACEStats(fgens, [], [] : start, print := [-1, 12]);
-#I  ACE 3.001        Tue Aug 21 13:47:09 2001
+#I  ACE 3.001        Wed Oct 31 09:38:28 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
-#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.28; m=249998 t=2499\
+#I    name = rigel
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.10; m=249998 t=2499\
 98)
 #I  co: a=249998 r=83333 h=83333 n=249999; c=+0.00
 #I   coset ||      a      A      b      B   order   rep've
@@ -188,7 +188,7 @@ gap> ACEStats(fgens, [], [] : start, print := [-1, 12]);
 #I      11 ||     33     34      3     35       0   AB
 #I      12 ||     36      4     37     38       0   ba
 #I  ***
-rec( index := 0, cputime := 28, cputimeUnits := "10^-2 seconds", 
+rec( index := 0, cputime := 10, cputimeUnits := "10^-2 seconds", 
   activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
 \endexample
 
@@ -230,11 +230,11 @@ include the `silent' option. (We still have the `InfoACE' level set at
 \beginexample
 gap> ACECosetTableFromGensAndRels(fgens, [], [] : start, print := [-1, 12],
 >                                                 silent);
-#I  ACE 3.001        Tue Aug 21 13:48:28 2001
+#I  ACE 3.001        Wed Oct 31 09:40:18 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
-#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.28; m=249998 t=2499\
+#I    name = rigel
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.09; m=249998 t=2499\
 98)
 #I  co: a=249998 r=83333 h=83333 n=249999; c=+0.00
 #I   coset ||      a      A      b      B   order   rep've
@@ -277,10 +277,10 @@ standard form; so despite the differences in the {\GAP} versions, both
 gap> ACECosetTableFromGensAndRels(fgens, [], [] : max := 12,
 >                                                 start, print := -12,
 >                                                 incomplete);
-#I  ACE 3.001        Tue Aug 21 13:49:14 2001
+#I  ACE 3.001        Wed Oct 31 09:41:14 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
+#I    name = rigel
 #I  OVERFLOW (a=12 r=4 h=4 n=13; l=5 c=0.00; m=12 t=12)
 #I  co: a=12 r=4 h=4 n=13; c=+0.00
 #I   coset ||      a      A      b      B   order   rep've
@@ -360,12 +360,12 @@ the `InfoACE' level is still 3):
 
 \beginexample
 gap> ACEStart(fgens, [], []);
-#I  ACE 3.001        Tue Aug 21 13:50:33 2001
+#I  ACE 3.001        Wed Oct 31 09:42:49 2001
 #I  =========================================
 #I  Host information:
-#I    name = hamal
+#I    name = rigel
 #I  ***
-#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.28; m=249998 t=2499\
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.10; m=249998 t=2499\
 98)
 1
 gap> ACEParameters(1);
@@ -408,7 +408,7 @@ version of `ACEStats' (see~"ACEStats!interactive") :
 
 \beginexample
 gap> ACEStats(1); # The interactive version of ACEStats takes 1 or no arg'ts
-rec( index := 0, cputime := 28, cputimeUnits := "10^-2 seconds",
+rec( index := 0, cputime := 10, cputimeUnits := "10^-2 seconds", 
   activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
 \endexample
 
@@ -832,7 +832,7 @@ gap> ACEDisplayCosetTable([-12]);
 #I      11 ||     12     10     12       3   babaBab
 #I      12 ||     10     11     11       2   babaBaB
 #I  ------------------------------------------------------------
-gap>
+gap> 
 \endexample
 
 Note that at both the standardisation and coset table display  step  a
